{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 162,
  "lineage": "fc839129-e6e2-d1af-c8f2-f582a847faa8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-075dd20bacf8a3aa7",
            "domain": "vpc",
            "id": "eipalloc-075dd20bacf8a3aa7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-50-16-214-244.compute-1.amazonaws.com",
            "public_ip": "50.16.214.244",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Author": "sijibomi",
              "Name": "eip-nat_management"
            },
            "tags_all": {
              "Author": "sijibomi",
              "Name": "eip-nat_management"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "jenkins_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:697072513984:loadbalancer/tf-lb-20220326182141784400000001",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20220326182141784400000001-1059447252.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 5,
                "target": "TCP:8080",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "tf-lb-20220326182141784400000001",
            "idle_timeout": 60,
            "instances": [
              "i-0eb4968007262ee2d"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "tf-lb-20220326182141784400000001",
            "security_groups": [
              "sg-01a6c8a376fb57f67"
            ],
            "source_security_group": "697072513984/elb_jenkins_sg",
            "source_security_group_id": "sg-01a6c8a376fb57f67",
            "subnets": [
              "subnet-043978b14c7e89e96",
              "subnet-08467d82f5494aa86"
            ],
            "tags": {
              "Author": "sijibomi",
              "Name": "jenkins_elb"
            },
            "tags_all": {
              "Author": "sijibomi",
              "Name": "jenkins_elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.jenkins_master",
            "aws_key_pair.management",
            "aws_security_group.bastion_host",
            "aws_security_group.elb_jenkins_sg",
            "aws_security_group.jenkins_master_sg",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.management",
            "data.aws_ami.jenkins-master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00fc94c8acf59544a",
            "arn": "arn:aws:ec2:us-east-1:697072513984:instance/i-0f7d4a545de676a5b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f7d4a545de676a5b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "management",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-055d12605b487386a",
            "private_dns": "ip-10-0-1-39.ec2.internal",
            "private_ip": "10.0.1.39",
            "public_dns": "ec2-35-175-110-217.compute-1.amazonaws.com",
            "public_ip": "35.175.110.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0747fcde11eb0a48d",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-043978b14c7e89e96",
            "tags": {
              "Author": "sijibomi",
              "Name": "bastion"
            },
            "tags_all": {
              "Author": "sijibomi",
              "Name": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cda54ab87d82d35f"
            ]
          },
          "dependencies": [
            "aws_key_pair.management",
            "aws_security_group.bastion_host",
            "aws_subnet.public_subnets",
            "aws_vpc.management",
            "data.aws_ami.bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fde3aa5dfd96a667",
            "arn": "arn:aws:ec2:us-east-1:697072513984:instance/i-0eb4968007262ee2d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eb4968007262ee2d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "management",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e684dcf821c2e54c",
            "private_dns": "ip-10-0-0-178.ec2.internal",
            "private_ip": "10.0.0.178",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a9b807399a9ee26e",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03ded55048b4f2c70",
            "tags": {
              "Author": "sijibomi",
              "Name": "jenkins_master"
            },
            "tags_all": {
              "Author": "sijibomi",
              "Name": "jenkins_master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-093fd5a2441dc9be3"
            ]
          },
          "dependencies": [
            "aws_key_pair.management",
            "aws_security_group.bastion_host",
            "aws_security_group.elb_jenkins_sg",
            "aws_security_group.jenkins_master_sg",
            "aws_subnet.private_subnets",
            "aws_vpc.management",
            "data.aws_ami.jenkins-master"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697072513984:internet-gateway/igw-0df8d400db3c0a2dc",
            "id": "igw-0df8d400db3c0a2dc",
            "owner_id": "697072513984",
            "tags": {
              "Author": "sijibomi",
              "Name": "igw_management"
            },
            "tags_all": {
              "Author": "sijibomi",
              "Name": "igw_management"
            },
            "vpc_id": "vpc-04d9acc8f02eb5ed5"
          },
          "dependencies": [
            "aws_vpc.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-075dd20bacf8a3aa7",
            "connectivity_type": "public",
            "id": "nat-0f94c6930c27b0a27",
            "network_interface_id": "eni-01c484b14edf67f5c",
            "private_ip": "10.0.1.76",
            "public_ip": "50.16.214.244",
            "subnet_id": "subnet-043978b14c7e89e96",
            "tags": {
              "Author": "sijibomi",
              "Name": "nat_management"
            },
            "tags_all": {
              "Author": "sijibomi",
              "Name": "nat_management"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697072513984:route-table/rtb-0ec867256e2884489",
            "id": "rtb-0ec867256e2884489",
            "owner_id": "697072513984",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f94c6930c27b0a27",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "sijibomi",
              "Name": "private_rt_management"
            },
            "tags_all": {
              "Author": "sijibomi",
              "Name": "private_rt_management"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d9acc8f02eb5ed5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697072513984:route-table/rtb-0fe5c611978758e5a",
            "id": "rtb-0fe5c611978758e5a",
            "owner_id": "697072513984",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0df8d400db3c0a2dc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "sijibomi",
              "Name": "public_rt_management"
            },
            "tags_all": {
              "Author": "sijibomi",
              "Name": "public_rt_management"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d9acc8f02eb5ed5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1f8296593716495",
            "route_table_id": "rtb-0ec867256e2884489",
            "subnet_id": "subnet-03ded55048b4f2c70"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.management"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084ceba400fb7e8a6",
            "route_table_id": "rtb-0ec867256e2884489",
            "subnet_id": "subnet-0f5736fbba30a0f05"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f46644f300ad12c",
            "route_table_id": "rtb-0fe5c611978758e5a",
            "subnet_id": "subnet-043978b14c7e89e96"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.management"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c28cc248ffe4704",
            "route_table_id": "rtb-0fe5c611978758e5a",
            "subnet_id": "subnet-08467d82f5494aa86"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697072513984:security-group/sg-0cda54ab87d82d35f",
            "description": "Allow SSH from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cda54ab87d82d35f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_sg_management",
            "name_prefix": "",
            "owner_id": "697072513984",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "sijibomi",
              "Name": "bastion_sg_management"
            },
            "tags_all": {
              "Author": "sijibomi",
              "Name": "bastion_sg_management"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d9acc8f02eb5ed5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.management"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697072513984:security-group/sg-01a6c8a376fb57f67",
            "description": "Allow http traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a6c8a376fb57f67",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb_jenkins_sg",
            "name_prefix": "",
            "owner_id": "697072513984",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "sijibomi",
              "Name": "elb_jenkins_sg"
            },
            "tags_all": {
              "Author": "sijibomi",
              "Name": "elb_jenkins_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d9acc8f02eb5ed5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.management"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_master_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697072513984:security-group/sg-093fd5a2441dc9be3",
            "description": "Allow traffic on port 8080 and enable SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-093fd5a2441dc9be3",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01a6c8a376fb57f67"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cda54ab87d82d35f"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jenkins_master_sg",
            "name_prefix": "",
            "owner_id": "697072513984",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "sijibomi",
              "Name": "jenkins_master_sg"
            },
            "tags_all": {
              "Author": "sijibomi",
              "Name": "jenkins_master_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d9acc8f02eb5ed5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_host",
            "aws_security_group.elb_jenkins_sg",
            "aws_vpc.management"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_workers_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697072513984:security-group/sg-0e7a01d0d5f3cfba8",
            "description": "Allow traffic on port 22 from Jenkins master SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e7a01d0d5f3cfba8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-093fd5a2441dc9be3",
                  "sg-0cda54ab87d82d35f"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jenkins_workers_sg",
            "name_prefix": "",
            "owner_id": "697072513984",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "sijibomi",
              "Name": "jenkins_workers_sg"
            },
            "tags_all": {
              "Author": "sijibomi",
              "Name": "jenkins_workers_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d9acc8f02eb5ed5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_host",
            "aws_security_group.elb_jenkins_sg",
            "aws_security_group.jenkins_master_sg",
            "aws_vpc.management"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697072513984:subnet/subnet-03ded55048b4f2c70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ded55048b4f2c70",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "697072513984",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "sijibomi",
              "Name": "private_10.0.0.0_us-east-1a"
            },
            "tags_all": {
              "Author": "sijibomi",
              "Name": "private_10.0.0.0_us-east-1a"
            },
            "vpc_id": "vpc-04d9acc8f02eb5ed5"
          },
          "dependencies": [
            "aws_vpc.management"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697072513984:subnet/subnet-0f5736fbba30a0f05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5736fbba30a0f05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "697072513984",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "sijibomi",
              "Name": "private_10.0.2.0_us-east-1b"
            },
            "tags_all": {
              "Author": "sijibomi",
              "Name": "private_10.0.2.0_us-east-1b"
            },
            "vpc_id": "vpc-04d9acc8f02eb5ed5"
          },
          "dependencies": [
            "aws_vpc.management"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697072513984:subnet/subnet-043978b14c7e89e96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043978b14c7e89e96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "697072513984",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "sijibomi",
              "Name": "public_10.0.1.0_us-east-1a"
            },
            "tags_all": {
              "Author": "sijibomi",
              "Name": "public_10.0.1.0_us-east-1a"
            },
            "vpc_id": "vpc-04d9acc8f02eb5ed5"
          },
          "dependencies": [
            "aws_vpc.management"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697072513984:subnet/subnet-08467d82f5494aa86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08467d82f5494aa86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "697072513984",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "sijibomi",
              "Name": "public_10.0.3.0_us-east-1b"
            },
            "tags_all": {
              "Author": "sijibomi",
              "Name": "public_10.0.3.0_us-east-1b"
            },
            "vpc_id": "vpc-04d9acc8f02eb5ed5"
          },
          "dependencies": [
            "aws_vpc.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697072513984:vpc/vpc-04d9acc8f02eb5ed5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e01706a4dac595d3",
            "default_route_table_id": "rtb-0e8b780c654abdad6",
            "default_security_group_id": "sg-0a20bf84cc9be6f12",
            "dhcp_options_id": "dopt-0954d8238fc66efbe",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04d9acc8f02eb5ed5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e8b780c654abdad6",
            "owner_id": "697072513984",
            "tags": {
              "Author": "sijibomi",
              "Name": "management"
            },
            "tags_all": {
              "Author": "sijibomi",
              "Name": "management"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}